--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 <head>
 
 <body style="background-color:blue;">
-<h1 style="color: yellow;" align="center">APRENDE E CRESCE</h1>
+<h1 style="color: yellow;" align="center">APRENDE CRESCE</h1>
 <img src="paula.jpg" height="250px" width="100%">
 <h1 style="color: yellow;" align="center">ORIENTAÇÕES, DICAS E PLANOS DE AULA PARA VOCÊ!</h1>
-<img src="992.jpg" height="30%" width="20%" display: inline-block; vertical-align: top;>
+<img src="992.jpg" height="30%" width="20%">
 
 <h1 style="color: yellow;">Sobre o Site</h1>
 <h2> Este Site é um espaço para você professor iniciante acessar sugestões de planos de aula, baixar mídias de apoio, receber orientações e dicas ou 
-até mesmo compartilhar um plano de aula ou ainda fazer um curso. display: inline-block; vertical-align: top;</h2>
+até mesmo compartilhar um plano de aula ou ainda fazer um curso.</h2>
 
 <br></br>
 <H1></H1>
